--- a/index.html
+++ b/index.html
@@ -9,5 +9,28 @@
 <link rel="shortcut icon" href="favicon.ico"></head>
 <body>
   <div id="root"></div>
-<script type="text/javascript" src="app538489a60ee15223bc4b.bundle.js?538489a60ee15223bc4b"></script></body>
+<script type="text/javascript" src="app538489a60ee15223bc4b.bundle.js?538489a60ee15223bc4b"></script>
+
+<!-- Yandex.Metrika informer -->
+<a href="https://metrika.yandex.ru/stat/?id=56197747&amp;from=informer"
+target="_blank" rel="nofollow"><img src="https://informer.yandex.ru/informer/56197747/3_1_FFFFFFFF_EFEFEFFF_0_pageviews"
+style="width:88px; height:31px; border:0;" alt="Яндекс.Метрика" title="Яндекс.Метрика: данные за сегодня (просмотры, визиты и уникальные посетители)" class="ym-advanced-informer" data-cid="56197747" data-lang="ru" /></a>
+<!-- /Yandex.Metrika informer -->
+
+<!-- Yandex.Metrika counter -->
+<script type="text/javascript" >
+   (function(m,e,t,r,i,k,a){m[i]=m[i]||function(){(m[i].a=m[i].a||[]).push(arguments)};
+   m[i].l=1*new Date();k=e.createElement(t),a=e.getElementsByTagName(t)[0],k.async=1,k.src=r,a.parentNode.insertBefore(k,a)})
+   (window, document, "script", "https://mc.yandex.ru/metrika/tag.js", "ym");
+
+   ym(56197747, "init", {
+        clickmap:true,
+        trackLinks:true,
+        accurateTrackBounce:true
+   });
+</script>
+<noscript><div><img src="https://mc.yandex.ru/watch/56197747" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
+<!-- /Yandex.Metrika counter -->
+
+</body>
 </html>
